# solitare

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  index.html  style.css
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci-cd.yml  commit-lint.yml  deploy-static-site.yml  yamlfmt.yml
src/: game.rs  main.rs
